homework/22.13/k8s/app/frontendNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
